
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(practise)

SET(TEST true CACHE bool "default build test")
SET(CC_DISABLE_TIMING false CACHE bool "default not test time")

if (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
    if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        SET(NEWCXX_ENABLED_FLAG "-std=c++11 -stdlib=libc++ -Wall -O2")
    else()
        SET(NEWCXX_ENABLED_FLAG "-std=c++11 -Wall -Wno-mismatched-tags -O2")
    endif()
elseif (${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
    SET(NEWCXX_ENABLED_FLAG "-std=c++11 -Wall")
else()
    MESSAGE(FATAL_ERROR, "Only GCC and clang is supported for now.")
endif()

SET(CMAKE_CXX_FLAGS ${NEWCXX_ENABLED_FLAG})
MESSAGE(STATUS "CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest/include
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest)
SET(GTEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest/src/gtest-all.cc)
ADD_LIBRARY(gtest ${GTEST_SRC})

FILE(GLOB_RECURSE SRC src/*.cpp)
INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(${CMAKE_PROJECT_NAME} SHARED ${SRC})

SET(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install)
INSTALL(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION ${INSTALL_DIR}/lib)
INSTALL(DIRECTORY include DESTINATION ${INSTALL_DIR}/include)

IF(TEST)
    FILE(GLOB_RECURSE TEST_SRC test/*.cpp)
    ADD_EXECUTABLE(test_practise ${TEST_SRC})
    TARGET_LINK_LIBRARIES(test_practise 
        PUBLIC ${CMAKE_PROJECT_NAME} gtest pthread)
ENDIF()