CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(practise)
IF(POLICY CMP0064)
    CMAKE_POLICY(SET CMP0064 NEW)
ENDIF()
SET(TEST true CACHE bool "default build test")
SET(CC_DISABLE_TIMING false CACHE bool "default not test time")

IF(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
    SET(TARGET_OS_LINK_LIBS pthread)
ENDIF()
IF (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    IF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
        SET(NEWCXX_ENABLED_FLAG "-std=c++11 -stdlib=libc++ -Wall -O2")
    ELSE()
        SET(NEWCXX_ENABLED_FLAG "-std=c++11 -Wall -Wno-mismatched-tags -O2")
    ENDIF()
ELSEIF (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    SET(NEWCXX_ENABLED_FLAG "-std=c++11 -Wall")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
    SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Z7")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
    IF(CMAKE_TARGET_ARCH STREQUAL "X86")
        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Ob1")
    ENDIF()
ELSE()
    MESSAGE(FATAL_ERROR, "Only GCC and clang is supported for now.")
ENDIF()

SET(CMAKE_CXX_FLAGS ${NEWCXX_ENABLED_FLAG})
MESSAGE(STATUS "CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest/include
    ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest)
SET(GTEST_SRC ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest/src/gtest-all.cc)
ADD_LIBRARY(gtest ${GTEST_SRC})

FILE(GLOB_RECURSE SRC src/*.cpp)
INCLUDE_DIRECTORIES(include)
ADD_LIBRARY(${CMAKE_PROJECT_NAME} SHARED ${SRC})
ADD_LIBRARY(${CMAKE_PROJECT_NAME}_s ${SRC})

SET(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/install)
INSTALL(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION ${INSTALL_DIR}/lib)
INSTALL(DIRECTORY include DESTINATION ${INSTALL_DIR}/include)

IF(TEST)
    FILE(GLOB_RECURSE TEST_SRC test/*.cpp test/*/*.cpp )
    ADD_EXECUTABLE(test_practise ${TEST_SRC})
    TARGET_LINK_LIBRARIES(test_practise 
        PUBLIC ${CMAKE_PROJECT_NAME}_s gtest ${TARGET_OS_LINK_LIBS})
ENDIF()